Use wording of registrars/resolvers for the implementations
Signed-off-by: Stephen Curran <swcurran@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,7 +89,7 @@ nav:
 - Examples:
     - did:tdw DID Log Example: example.md
 - Implementations:
-    - Trust DID Web (did:tdw) Implementations: implementations.md
+    - did:tdw Registrars/Resolvers: implementations.md
     - Trust DID Web Server: trustdidweb-server.md
 - Demos:
     - Trust DID Web (did:tdw) Demos: demos/README.md
