--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,7 +96,7 @@ nav:
     - did:webvh Registrars/Resolvers: implementations.md
     - did:webvh Web Server: trustdidweb-server.md
 - Demos:
-    - did:webvh Web (did:tdw) Demos: demos/README.md
+    - did:webvh Demos: demos/README.md
 - Contributing:
     - How to Contribute: root_README.md
     - Contributor Guidelines: root_CONTRIBUTOR.md
