Updates to the info site following the publication of the v0.5 release
Signed-off-by: Stephen Curran <swcurran@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,7 +94,7 @@ nav:
     - did:webvh DID Log Example: example.md
 - Implementations:
     - did:webvh Registrars/Resolvers: implementations.md
-    - did:webvh Web Server: trustdidweb-server.md
+    - did:webvh Web Server: didwebvh-server.md
 - Demos:
     - did:webvh Demos: demos/README.md
 - Contributing:
