--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ nav:
     - Specification: specification.md
 - Implementer's Guide:
     - The `did:webvh` Implementer's Guide: implementers-guide/README.md
+    - Implementing a `did:webvh` Resolver: implementers-guide/resolver-algorithm.md
     - What Are A DID's Valid Keys?: implementers-guide/did-valid-keys.md
     - Using Pre-Rotation keys: implementers-guide/prerotation-keys.md
     - DID Portability: implementers-guide/did-portability.md
