Add FAQ and why json lines question
Signed-off-by: Brian Richter <brian@aviary.tech>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
     - Overview: overview.md
     - Work Item Meetings: agenda.md
     - did/whois: whois.md
+    - Frequently Asked Questions: faq.md
     - Release Notes: version.md
 - The Specification:
     - Specification: specification.md
