Adds a document evaluatiing did:webvh against the W3C DID Rubric
Signed-off-by: Stephen Curran <swcurran@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
     - Introduction to did:webvh: README.md
     - Overview: overview.md
     - Frequently Asked Questions: faq.md
+    - DID Rubric Evaluation: did-rubric-evaluation.md
     - Work Item Meetings: agenda.md
     - did/whois: whois.md
     - Release Notes: version.md
