Updated FAQ section with performance and why the witness file added
Signed-off-by: Stephen Curran <swcurran@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,13 +80,17 @@ nav:
 - Welcome:
     - Introduction to did:webvh: README.md
     - Overview: overview.md
-    - Frequently Asked Questions: faq.md
     - DID Rubric Evaluation: did-rubric-evaluation.md
     - Work Item Meetings: agenda.md
     - did/whois: whois.md
     - Release Notes: version.md
 - The Specification:
     - Specification: specification.md
+- FAQ:
+    - Frequently Asked Questions: faq/README.md
+    - Why JSON Lines?: faq/JSONLines.md
+    - How fast is did:webvh?: faq/Performance.md
+    - Why a separate Witness File?: faq/WitnessFile.md
 - Implementer's Guide:
     - The `did:webvh` Implementer's Guide: implementers-guide/README.md
     - Implementing a `did:webvh` Resolver: implementers-guide/resolver-algorithm.md
